# sast-assistant

./: .gitignore  README.md  TODO.md  notes.md  pyproject.toml
docs/: markdown_reporter_explained.md
examples/vulnerable_code/java/: VulnerableApp.java
examples/vulnerable_code/python/: vulnerable_app.py
src/sast_assistant/: __init__.py  __main__.py  config.py
src/sast_assistant/ai_engine/: __init__.py  client.py  prompts.py
src/sast_assistant/extractor/: __init__.py  context.py
src/sast_assistant/models/: __init__.py  finding.py  report.py  semgrep.py
src/sast_assistant/reporter/: markdown.py
src/sast_assistant/scanner/: __init__.py  semgrep.py
