[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sast-assistant"
version = "1.0.0"
description = "AI-powered Static Application Security Testing assistant combining Semgrep with LLM-based analysis"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["security", "sast", "semgrep", "ai", "vulnerability", "sql-injection", "xss"]
authors = [
    { name = "SAST Assistant Team" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "pydantic>=2.0",
    "google-genai>=1.0.0",
    "tenacity>=8.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[project.scripts]
sast-assistant = "sast_assistant.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/sast_assistant"]
